# students-api-rust

./: .gitignore  .sqlxrc  Cargo.toml  Dockerfile  README.md  TODO.md  api_gateway_rest.tf  cloudwatch.tf  demo.sh  deploy.ps1  iam_roles_policies.tf  lambdas.tf  main.tf  outputs.tf  payload.json  response.json  sns_sqs.tf  students.db  usage_plan_api_key.tf  variables.tf
.cargo/: config.toml
.sqlx/: query-2f12541a6b99acf6d9e8f7ad13438df4ab92edcbfa01f38930aae63f1554b534.json  query-32ffb0a819d67cbec839049ce72b13e0f86b23b8ddda450c21ca84d2cafa621f.json  query-3990f85841a3169266f96f4f53c175d74697d14fe14bc08df99c0c46e70b8625.json  query-55710e04507a429ff1244bdf7355ddebb78f1110e1b7af0299e00e9e4610eafd.json  query-af9f6d2012734fcaded2ed3badb8392970579f8fcefd5c47e89d1682a5d2141a.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/studentsapi/: ApiService.kt  EmailViewModel.kt  MainActivity.kt  RetrofitClient.kt
android/app/src/main/java/com/example/studentsapi/ui/theme/: Color.kt  Theme.kt  Type.kt
android/gradle/wrapper/: gradle-wrapper.properties
bff/: Cargo.toml
bff/src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs
lambdas/email-processor/: email_processor.py
migrations/: 01_db_init.sql
src/: auth.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs
terraform/tarea1_backend/: main.tf  mainterraform.tf  terraform.tfstate  variables.tf  versions.tf
