[package]
name = "students_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "students_api"
path = "src/main.rs"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = "0.4"
futures = "0.3"
env_logger = "0.11"
log = "0.4"

# Dependencias para AWS Lambda
lambda_runtime = "0.12"
lambda_http = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# SDK de AWS para DynamoDB
aws-config = "1.1.5"
aws-sdk-dynamodb = "1.15.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }